fix: make minor adjustments for overflow and error handling

--- a/styles/style.css
+++ b/styles/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 .container {
-	width: 25rem;
+	width: 30rem;
 	padding: 1rem;
 	border: 5px solid rgb(55, 58, 64);
 	border-radius: 1rem;
